--- a/tracker/templates/tracker/partials/transactions-container.html
+++ b/tracker/templates/tracker/partials/transactions-container.html
@@ -66,9 +66,20 @@
             <form hx-get="{% url 'transactions-list' %}"
             hx-target="#transaction-container"
             hx-swap="outerHTML">
+
                 <div class="mb-2 form-control">
                     {{ filter.form.transaction_type|add_label_class:"label text-white" }}
                     {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900 px-4" %}
+                </div>
+
+                <div class="mb-2 form-control">
+                    {{ filter.form.start_date|add_label_class:"label text-white" }}
+                    {% render_field filter.form.start_date class="input bg-gray-50 text-gray-900 px-4" %}
+                </div>
+
+                <div class="mb-2 form-control">
+                    {{ filter.form.end_date|add_label_class:"label text-white" }}
+                    {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900 px-4" %}
                 </div>
 
                 <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
