--- a/tracker/templates/tracker/partials/transactions-container.html
+++ b/tracker/templates/tracker/partials/transactions-container.html
@@ -82,6 +82,10 @@
                     {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900 px-4" %}
                 </div>
 
+                <div class="mb-4 form-control">
+                    {% render_field filter.form.category class="text-green-500 border-gray-300 rounded focus:ring-green-500" %}
+                </div>
+
                 <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                     Filter
                 </button>
