--- a/tracker/templates/tracker/partials/create-transaction.html
+++ b/tracker/templates/tracker/partials/create-transaction.html
@@ -14,7 +14,12 @@
         <div class="block mb-1">
             {{ form.amount|add_label_class:"label text-white" }}
         </div>
-        {% render_field form.amount class="input text-black w-full" %}
+        {% render_field form.amount class="input text-black w-full" type="number" step="0.01" %}
+        {% for error in form.amount.errors %}
+            <p class="text-red-400 mt-1">
+                {{ error }}
+            </p>
+        {% endfor %}
     </div>
     <div class="mb-2 form-control">
         <div class="block mb-1">
@@ -28,5 +33,11 @@
     </div>
     <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Add
+    </button>
+    <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        hx-get="{% url 'transactions-list' %}"
+        hx-target="#transaction-block"
+        hx-push-url="true">
+        Cancel
     </button>
 </form>
