--- a/tracker/templates/tracker/partials/transaction-success.html
+++ b/tracker/templates/tracker/partials/transaction-success.html
@@ -1,18 +1,32 @@
-<div role="alert" class="alert alert-info">
+{% comment %} Display a red message when deleting the transaction {% endcomment %}
+{% if delt %}
+<div role="alert" class="alert alert-error alert-soft">
   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
   </svg>
   <span>{{ message }}</span>
 </div>
 
-<div class="mt-4">
-    <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-        hx-get="{% url 'create-transaction' %}"
-        hx-target="#transaction-block"
-        hx-push-url="true">
-        Add another
-    </button>
+{% else %}
+<div role="alert" class="alert alert-info">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+  </svg>
+  <span>{{ message }}</span>
+</div>
+{% endif %}
 
+<div class="mt-4">
+{% if delt %}
+    {% comment %} check if we are deleting the transaction, we don't want to see add another then {% endcomment %}
+    {% else %}
+        <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            hx-get="{% url 'create-transaction' %}"
+            hx-target="#transaction-block"
+            hx-push-url="true">
+            Add another
+        </button>
+    {% endif %}
     <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
         hx-get="{% url 'transactions-list' %}"
         hx-target="#transaction-block"
