--- a/tracker/templates/tracker/partials/transactions-container.html
+++ b/tracker/templates/tracker/partials/transactions-container.html
@@ -3,140 +3,145 @@
 {% load humanize %}
 
 <!-- Define Grid container -->
-    <div class="flex flex-col-reverse md:grid md:grid-cols-4 md:gap-4" id="transaction-container">
+<div class="flex flex-col-reverse md:grid md:grid-cols-4 md:gap-4" id="transaction-container">
 
-        <!-- 3/4 cols for the table of transactions -->
-        <div class="col-span-3">
-            <div class="my-4">
-                <h1 class="mt-4 mb-4 prose prose-2xl text-white">
-                    Totals
-                </h1>
-                <table class="table">
-                    <thead class="text-xs text-white uppercase border-b">
-                        <tr>
-                            <th>Total Income</th>
-                            <th>Total Expenses</th>
-                            <th>Net Income</th>
-                        </tr>
-                    </thead>
-
-                    <tbody class="border-b">
-                        <tr>
-                            <td>${{ total_income|floatformat:2|intcomma }}</td>
-                            <td>${{ total_expense|floatformat:2|intcomma }}</td>
-                            <td>${{ net_income|floatformat:2|intcomma }}</td>
-                        </tr>
-                    </tbody>
-
-                </table>
-            </div>
-            <div class="flex justify-between items-center mt-4 mb-6">
-
-                <h1 class="mt-8 mb-4 prose prose-2xl text-white">
-                    Transactions
-                </h1>
-
-                <a hx-get="{% url 'create-transaction' %}"
-                    hx-push-url="true"
-                    hx-target="#transaction-block"
-                    class="cursor-pointer">
-
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="green" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                    </svg>
-
-                </a>
-
-            </div>
-            {% if transactions %}
-                <div class="flex justify-between items-center px-4 py-3 border-b border-white">
-                <table class="table">
-                    <thead class="text-xs text-white uppercase">
-                    <tr class="border-b border-white">
-                        <th class="px-6 py-3">Date</th>
-                        <th class="px-6 py-3">Category</th>
-                        <th class="px-6 py-3">Type</th>
-                        <th class="px-6 py-3">Amount</th>
-                        <th></th>
+    <!-- 3/4 cols for the table of transactions -->
+    <div class="col-span-3">
+        <div class="my-4">
+            <h1 class="mt-4 mb-4 prose prose-2xl text-white">
+                Totals
+            </h1>
+            <table class="table">
+                <thead class="text-xs text-white uppercase border-b">
+                    <tr>
+                        <th>Total Income</th>
+                        <th>Total Expenses</th>
+                        <th>Net Income</th>
                     </tr>
-                    </thead>
+                </thead>
 
-                    <tbody>
-                    {% partialdef transaction_list inline=True %}
-                        {% for transaction in transactions %}
+                <tbody class="border-b">
+                    <tr>
+                        <td>${{ total_income|floatformat:2|intcomma }}</td>
+                        <td>${{ total_expense|floatformat:2|intcomma }}</td>
+                        <td>${{ net_income|floatformat:2|intcomma }}</td>
+                    </tr>
+                </tbody>
 
-                            {% if forloop.last and transactions.has_next %}
-                            <tr class="border-b border-white"
-                                hx-get="{% url 'get-transactions' %}?page={{ transactions.next_page_number }}"
-                                hx-trigger="revealed"
-                                hx-swap="afterend"
-                                hx-include="#filterform">
-                            {% else %}
-                            <tr class="border-b border-white">
-                            {% endif %}
-                                <td>{{ transaction.date }}</td>
-                                <td>{{ transaction.category }}</td>
-                                <td>{{ transaction.type }}</td>
-                                <td>{{ transaction.amount }}</td>
-                                <td class="flex items-center">
-
-                                    <a hx-get="{% url 'update-transaction' transaction.pk %}"
-                                        hx-target="#transaction-block"
-                                        hx-push-url="true"
-                                        class="cursor-pointer">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mr-1">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                                        </svg>
-                                    </a>
-                                    <a hx-delete="{% url 'delete-transaction' transaction.pk %}"
-                                        hx-target="#transaction-block"
-                                        hx-push-url="true"
-                                        class="cursor-pointer"
-                                        hx-confirm="Are you sure you want to delete this transaction?">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                        </svg>
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    {% endpartialdef %}
-                    </tbody>
-                </table>
-                </div>
-            {% else %}
-                <p class="text-2x1 text-white">No transactions found.</p>
-            {% endif %}
+            </table>
         </div>
-        <!-- 1/4 cols for the filter form -->
-        <div class="col-span-1">
-            <form hx-get="{% url 'transactions-list' %}"
-            hx-target="#transaction-container"
-            hx-swap="outerHTML"
-            id="filterform">
+        <div class="flex justify-between items-center mt-4 mb-6">
 
-                <div class="mb-2 form-control">
-                    {{ filter.form.transaction_type|add_label_class:"label text-white" }}
-                    {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900 px-4" %}
-                </div>
+            <h1 class="mt-8 mb-4 prose prose-2xl text-white">
+                Transactions
+            </h1>
 
-                <div class="mb-2 form-control">
-                    {{ filter.form.start_date|add_label_class:"label text-white" }}
-                    {% render_field filter.form.start_date class="input bg-gray-50 text-gray-900 px-4" %}
-                </div>
+            <a hx-get="{% url 'create-transaction' %}"
+                hx-push-url="true"
+                hx-target="#transaction-block"
+                class="cursor-pointer">
 
-                <div class="mb-2 form-control">
-                    {{ filter.form.end_date|add_label_class:"label text-white" }}
-                    {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900 px-4" %}
-                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="green" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
 
-                <div class="mb-4 form-control">
-                    {% render_field filter.form.category class="text-green-500 border-gray-300 rounded focus:ring-green-500" %}
-                </div>
+            </a>
 
-                <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-                    Filter
-                </button>
-            </form>
         </div>
+        {% if transactions %}
+            <div class="flex justify-between items-center px-4 py-3 border-b border-white">
+            <table class="table">
+                <thead class="text-xs text-white uppercase">
+                <tr class="border-b border-white">
+                    <th class="px-6 py-3">Date</th>
+                    <th class="px-6 py-3">Category</th>
+                    <th class="px-6 py-3">Type</th>
+                    <th class="px-6 py-3">Amount</th>
+                    <th></th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% partialdef transaction_list inline=True %}
+                    {% for transaction in transactions %}
+
+                        {% if forloop.last and transactions.has_next %}
+                        <tr class="border-b border-white"
+                            hx-get="{% url 'get-transactions' %}?page={{ transactions.next_page_number }}"
+                            hx-trigger="revealed"
+                            hx-swap="afterend"
+                            hx-include="#filterform"
+                            hx-indicator="#spinner">
+                        {% else %}
+                        <tr class="border-b border-white">
+                        {% endif %}
+                            <td>{{ transaction.date }}</td>
+                            <td>{{ transaction.category }}</td>
+                            <td>{{ transaction.type }}</td>
+                            <td>{{ transaction.amount }}</td>
+                            <td class="flex items-center">
+
+                                <a hx-get="{% url 'update-transaction' transaction.pk %}"
+                                    hx-target="#transaction-block"
+                                    hx-push-url="true"
+                                    class="cursor-pointer">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 mr-1">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                                    </svg>
+                                </a>
+                                <a hx-delete="{% url 'delete-transaction' transaction.pk %}"
+                                    hx-target="#transaction-block"
+                                    hx-push-url="true"
+                                    class="cursor-pointer"
+                                    hx-confirm="Are you sure you want to delete this transaction?">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                    </svg>
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                {% endpartialdef %}
+                </tbody>
+            </table>
+            </div>
+        {% else %}
+            <p class="text-2x1 text-white">No transactions found.</p>
+        {% endif %}
     </div>
+    <!-- 1/4 cols for the filter form -->
+    <div class="col-span-1">
+        <form hx-get="{% url 'transactions-list' %}"
+        hx-target="#transaction-container"
+        hx-swap="outerHTML"
+        id="filterform">
+
+            <div class="mb-2 form-control">
+                {{ filter.form.transaction_type|add_label_class:"label text-white" }}
+                {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900 px-4" %}
+            </div>
+
+            <div class="mb-2 form-control">
+                {{ filter.form.start_date|add_label_class:"label text-white" }}
+                {% render_field filter.form.start_date class="input bg-gray-50 text-gray-900 px-4" %}
+            </div>
+
+            <div class="mb-2 form-control">
+                {{ filter.form.end_date|add_label_class:"label text-white" }}
+                {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900 px-4" %}
+            </div>
+
+            <div class="mb-4 form-control">
+                {% render_field filter.form.category class="text-green-500 border-gray-300 rounded focus:ring-green-500" %}
+            </div>
+
+            <button class="bg-[#73B769] hover:bg-[#56964a] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                Filter
+            </button>
+        </form>
+    </div>
+</div>
+
+<span class="loading loading-spinner loading-lg htmx-indicator" id="spinner">
+
+</span>
