--- a/tracker/templates/tracker/partials/navbar.html
+++ b/tracker/templates/tracker/partials/navbar.html
@@ -24,6 +24,14 @@
             </li>
 
             <li>
+                <a href="{% url 'transaction-charts' %}"
+                    class="block py-2 pl-3 pr-4 text-white rounded md:p-0"
+                    aria-current="page">
+                        My Charts
+                </a>
+            </li>
+
+            <li>
                 <a href="{% url 'account_logout' %}" 
                     class="block py-2 pl-3 pr-4 text-white rounded md:p-0" 
                     aria-current="page">
