--- a/tracker/templates/tracker/partials/transaction-success.html
+++ b/tracker/templates/tracker/partials/transaction-success.html
@@ -13,6 +13,9 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
   </svg>
   <span>{{ message }}</span>
+    {% if skipped_rows %}
+        <span>{{ skipped_rows }}</span>
+    {% endif %}
 </div>
 {% endif %}
 
